# putinqa

./: .gitignore  CMakeLists.txt  README.md  putinqa.desktop
.github/workflows/: release.yml
src/: appcontroller.cpp  appcontroller.h  main.cpp  mainwindow.h  putinqa.pro  resources.qrc
src/client/: authorization.cpp  authorization.h  client.cpp  client.h  serverworkload.cpp  serverworkload.h
src/client/session/: actions.cpp  actions.h  event.h  session.cpp  session.h  sessionstate.cpp  sessionstate.h  websocketconnection.cpp  websocketconnection.h
src/crypto/: crypto.cpp  crypto.h
src/icons/: putinqa.rc
src/qml/: CaptchaScreen.qml  EntryScreen.qml  MemberList.qml  NameBadge.qml  ProgressPanel.qml  ReceiverSession.qml  SenderSession.qml  SessionTimer.qml  SettingsScreen.qml  TransferComplete.qml  main.qml
vibecode/: ARCHITECTURE.md  ENCRYPTION.md  KNOWN_ISSUES.md  README.md  SERVER_PROTOCOL.md  SESSION_LIFECYCLE.md  TRANSFER_FLOW.md  UI_PATTERNS.md
